Resolve all UI issues (#155)
* Add chat service back to room

* Resolve button in room page

* Change back border radius navbar

* Cypress file removed

* Fix navbar

* Fix options margin

* Change color inconsistency

* Fix all dialog boxes

* Fix minor bug from sending empty text

* Make scrollbar transparent

* Implement adjustable split screen

* Complete resizable split screen

* Add logo

* Add logo to navbar

* Add icon to login page

* Fix css overwrite

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,9 +1,3 @@
-.peerPrepNavbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
 .logoutButton {
     border-radius: 20px;
     outline: 1px solid white;
@@ -17,4 +11,9 @@
 
 .logo {
     cursor: pointer;
+}
+
+.peerPrepLogo {
+    height: 40px;
+    padding: 4px;
 }
